--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.506.0",
     "next": "14.2.28",
+    "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
