--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.9.0",
     "@prisma/client": "^6.7.0",
     "@radix-ui/react-avatar": "^1.1.7",
-    "@radix-ui/react-dialog": "^1.1.12",
+    "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-slot": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.506.0",
     "next": "14.2.28",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
