--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@radix-ui/react-slot": "^1.2.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.506.0",
     "next": "14.2.28",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.56.2",
     "sonner": "^2.0.3",
